<resources>
    <string name="app_name">iSave</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="loginbutton">login</string>
    <string name="register">Register</string>
    <string name="goRegis"><u>Click Here to Register</u></string>
    <string name="signup">Sign Up</string>
    <string name="goLogin"><u>Click Here to Login</u></string>
    <string name="email">email</string>
    <string name="name">fullname</string>
    <string name="kode">kode arduino</string>
    <string name="validate">Validate</string>
</resources>
